--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,5 +50,5 @@ jobs:
           cd ~
           mkdir .aws
           cd .aws
-          echo "{{secrets.AWS_CREDENTIALS}}" > credentials
+          echo "${{secrets.AWS_CREDENTIALS}}" > credentials
           ls
