--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,8 +46,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: create credentials
         run: |
+          pwd
           cd ~
           mkdir .aws
           cd .aws
           echo "${{secrets.AWS_CREDENTIALS}}" > credentials
-          ls
+          aws s3 ls
+      - name: create deploy
+        run: aws s3 ls
+
