--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,5 +53,6 @@ jobs:
           echo "${{secrets.AWS_CREDENTIALS}}" > credentials
           aws s3 ls
       - name: create deploy
-        run: aws s3 ls
-
+        run: 
+         cd /home/runner/work/actions-ex/actions-ex
+         aws s3 cp main.py s3://bigdata0411/
