--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,4 +54,5 @@ jobs:
           aws s3 ls
       - name: create deploy
         run: 
-         aws s3 cp main.py s3://bigdata0411/
+         aws s3 mb s3://bigdata0411
+        aws s3 cp actions-ex s3://bigdata0411/ --recursive
